feat: implement PWA install prompt and update service worker caching strategy

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,22 +3,36 @@
   "short_name": "Bookmark",
   "description": "Save and manage your favorite links in one place.",
   "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#08080d",
   "theme_color": "#7c3aed",
   "orientation": "portrait-primary",
+  "prefer_related_applications": false,
   "icons": [
     {
       "src": "/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
