Rename extension from LinkNest to Smart-Bookmark, updating all relevant files including manifest, HTML, and JavaScript components. Adjust export functionality to reflect new app name and ensure consistency across user interface elements.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "LinkNest",
+  "name": "Smart-Bookmark",
   "short_name": "KeepBookmark",
   "description": "Save, organize, and AI-categorize your bookmarks",
   "start_url": "/dashboard",
